Lesson-11-Ingress/ingress-hosts.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#
# Copyleft (c) by Denis Astahov 2021
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: test.net
    http:
      paths:
        - path: 
          pathType: ImplementationSpecific
          backend:
           service:
             name: main
             port:
               number: 80

  - host: web1.test.net
    http:
      paths:
        - path: 
          pathType: ImplementationSpecific
          backend:
           service:
             name: web1
             port:
               number: 80

  - host: web2.test.net
    http:
      paths:
        - path: 
          pathType: ImplementationSpecific
          backend:
           service:
             name: web2
             port:
               number: 80

  - host: cat.test.net
    http:
      paths:
        - path: 
          pathType: ImplementationSpecific
          backend:
           service:
             name: tomcat
             port:
               number: 8080
